# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.806 2008/12/08 10:09:43 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2008/11/12) Removed not supported PostMaster module
    Kernel/System/PostMaster/Filter/AgentInterface.pm.
 - (2008/11/10) Added autocomplete feature for customer search.
 - (2008/10/30) Fixed bug# 2371 - "Panic, no user data!" message should be more
    verbose.
 - (2008/10/29) Added additional default attributes of customer attributes like
    (phone, fax, mobile, street, zip, city). Use scripts/DBUpdate-to-2.4.*.sql
    for upgrading.
 - (2008/10/28) Fixed bug# 1722 - weekday sorting in TimeWorkingHours corrected.
 - (2008/10/28) Fixed bug# 1491 - text in the file "UPGRADING" is misleading.
 - (2008/10/28) Implemented RFE (bug# 1006): Added ticket change time to
    TicketGet and ArticleGet output. As a result, parameter 'Changed' is now
    usable as field in CSV search output as ticket change time.
 - (2008/10/24) Added StopAfterMatch attribute on postmaster filter (DB and
    config backend).
 - (2008/10/23) First version of improved ticket overview modus, added S/M/L
    options.
 - (2008/10/23) Added ticket change time option to agent ticket search.
 - (2008/10/14) Added COUNT as result option in TicketSearch() of
    Kernel::System::Ticket to increase performance of count lookups.
 - (2008/10/14) Added new tables for "RFC 2822 conform" and Service/SLA
    preferences feature (use scripts/DBUpdate-to-2.4.*.sql for upgrading).
 - (2008/10/14) Added RFC 2822 conform In-Reply-To and References header
    support for outgoing emails (Threading).
 - (2008/10/02) Added script to move stored attachments from one backend to