@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.806 2008/12/08 10:09:43 tr Exp $
+# $Id: CHANGES,v 1.807 2008/12/09 00:04:44 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,11 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/12/08) Added feature to install included packages located under
+    var/packages/*.opm on first/initial setup.
+ - (2008/12/08) Added new postmaster filter to check if new arrived email is
+    based on follow up of forwarded email. Then Followup should not be shown
+    as "email-external", it should be shown as "email-internal".
  - (2008/11/12) Removed not supported PostMaster module
     Kernel/System/PostMaster/Filter/AgentInterface.pm.
  - (2008/11/10) Added autocomplete feature for customer search.
